k8s/jaeger/ingress.yaml
# exponho a porta 16686 (Jaeger Query UI) - as portas OTLP (4317/4318) sao
# alcancadas so de dentro do cluster, via Service (k8s/jaeger/service.yaml).
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: jaeger.130.213.20.130.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaeger
                port:
                  number: 16686
